Ajout possibilité d'arrêt du service lors d'un clic sur la notification

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </service>
+
+        <service android:name=".main.AppService$NotificationActionService" android:exported="true">
+            <intent-filter>
+                <action android:name="ACTION_1"/>
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
